<resources>
    <string name="app_name">AR Action</string>
    <string name="sensor_data_example_name">Sensor Data</string>
    <string name="direction_example_name">Direction</string>
    <string name="frame_rate_example_name">Frame Rate</string>
    <string name="radial_menu_example_name">Radial Menu</string>
    <string name="tile_menu_example_name">Tile Menu</string>
    <string name="tile_locked_menu_example_name">Tile Locked Menu</string>
    <string name="error">Could not connect with glasses\nBluetooth and the glasses must be active\nUse Tooz OS to pair with glasses</string>
    <string name="sensor_data_sensor_placeholder">sensor</string>
    <string name="sensor_data_x_placeholder">x</string>
    <string name="sensor_data_y_placeholder">y</string>
    <string name="sensor_data_z_placeholder">z</string>
    <string name="direction_arrow_description">Arrow to show the direction, where the user is looking.</string>
    <string name="direction_button_prompt">Press the button to fix a new root position.</string>
    <string name="direction_warning">This example does not do anything.</string>
    <string name="frame_rate_frame_counter_label">frame</string>
    <string name="frame_rate_reading_counter_label">reading</string>
    <string name="frame_rate_starting_count">0</string>
    <string name="frame_rate_interval_label">interval</string>
    <string name="frame_rate_starting_interval">250</string>
    <string name="frame_rate_interval_unit">ms</string>
</resources>
