<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_safe_area"
    android:layout_height="@dimen/height_safe_area"
    android:background="@color/background_prompt"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/background_prompt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_marginBottom="@dimen/item_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/sensor_data_sensor_placeholder"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/sensor_x"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_below="@id/sensor_name"
            android:layout_marginBottom="@dimen/item_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/sensor_data_x_placeholder"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/sensor_y"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_below="@id/sensor_x"
            android:layout_marginBottom="@dimen/item_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/sensor_data_y_placeholder"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/sensor_z"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_below="@id/sensor_y"
            android:layout_marginBottom="@dimen/item_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/sensor_data_z_placeholder"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

    </RelativeLayout>

</RelativeLayout>